--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <!--
-  Copyright (c) 2016, wqwtsr. All rights reserved. Use of this source code
+  Copyright (c) 2016, <your name>. All rights reserved. Use of this source code
   is governed by a BSD-style license that can be found in the LICENSE file.
 -->
 
@@ -11,8 +11,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="scaffolded-by" content="https://github.com/google/stagehand">
-    <title>team1exercise</title>
+    <title>untitled2</title>
     <link rel="stylesheet" href="styles.css">
+
+
     <script defer src="main.dart" type="application/dart"></script>
     <script defer src="packages/browser/dart.js"></script>
 </head>
@@ -20,6 +22,8 @@
 <body>
 
   <div id="output"></div>
+  <div id="showme"></div>
+  <button id="sample_text_id">排序</button>
 
 </body>
 </html>
