--- a/web/index.html
+++ b/web/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<!--
+  Copyright (c) 2016, <your name>. All rights reserved. Use of this source code
+  is governed by a BSD-style license that can be found in the LICENSE file.
+-->
+
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="scaffolded-by" content="https://github.com/google/stagehand">
+    <title>team1exercise</title>
+    <link rel="stylesheet" href="styles.css">
+    <script defer src="main.dart" type="application/dart"></script>
+    <script defer src="packages/browser/dart.js"></script>
 </head>
 <body>
+<div class="signup">
+    <form >
+        姓名：<br>
+        <input type="text" name="姓名" >
+        <br>
+        密码:<br>
+        <input type="password" name="password">
+        <br>
+        确认密码:<br>
+        <input type="password" name="confirm_password">
+        <br>
+        忌口食物:<br>
+        <input type="checkbox" name="signup_taboo">
+        <br>
+        <br>
+        <input type="button" value="注册">
+    </form>
 
+</div>
 </body>
 </html>
