--- a/web/index.html
+++ b/web/index.html
@@ -34,15 +34,15 @@
     <br>
     <h1>注册页面</h1>
     <form id=Signup_div class="Signup_div" style="vertical-align:middle">
-        <p> 姓名：<input type="text" id="user_name_sign" ></p>
-        <p> 密码: <input type="password" id="user_pw_log"></p>
-        <p>确认密码:  <input type="password" id="user_pw_confirm"></p>
+        <p> 姓名：<input type="text" id="SignUp_Username" ></p>
+        <p> 密码: <input type="password" id="SignUp_Password"></p>
+        <p>确认密码:  <input type="password" id="SignUp_ConfirmPW"></p>
         <p> 忌口食物: 鸡蛋<input type="checkbox" id="signup_taboo_1">
             海鲜<input type="checkbox" id="signup_taboo_2">
             奶制品<input type="checkbox" id="signup_taboo_3">
             花生<input type="checkbox" id="signup_taboo_4"></p>
         <nav>
-            <a  href="" id="SignUp_Btn" title="SignUp">注册</a>
+            <a  href="" id="SignUp_Btn2" title="SignUp">注册</a>
             &nbsp;
             <a  href="" id="Cancel_sign_Btn" title="Cancel">取消</a>
         </nav>
@@ -52,11 +52,11 @@
 
     <h1>登录页面</h1>
     <form id="LogIn_div" class="LogIn_div">
-        <p> 姓名：<input type="text" name="姓名" ></p>
-        <p> 密码:<input type="password" name="password"></p>
+        <p> 姓名：<input type="text" id="LogIn_Username" ></p>
+        <p> 密码:<input type="password" id="LogIn_Password"></p>
         <nav>
-            <a  href="" id="LogIn_Btn" title="LogIn">登录</a>
-            <a  href="" id="Cancel_log_Btn" title="LogIn">取消</a>
+            <a  href="" id="LogIn_Btn1" title="LogIn">登录</a>
+            <a  href="" id="SignUp_Btn1" title="LogIn">注册</a>
         </nav>
     </form>
 
@@ -64,7 +64,7 @@
 <h1>主页</h1>
 <div id="Homepage_div" class="Homepage">
     <div id="header">
-        <button id="LogIn_Btn" class="plat_Btn">登录</button>
+        <button id="LogIn_Btn2" class="plat_Btn">登录</button>
         <img id="LogIn_img" src="">
     </div>
     <h3>搭配模块</h3>
@@ -118,6 +118,5 @@
         </table>
     </div>
 </div>
-
 </body>
 </html>
