--- a/web/index.html
+++ b/web/index.html
@@ -41,7 +41,7 @@
         <p> 姓名：<input type="text" id="SignUp_Username" ></p>
         <p> 密码: <input type="password" id="SignUp_Password"></p>
         <p>确认密码:  <input type="password" id="SignUp_ConfirmPW"></p>
-        <p> 忌口食物: 鸡蛋<input type="checkbox" id="signup_taboo_1">
+        <p> 忌口食物: 鸡蛋<input type="checkbox" id="signup_taboo_1" onselect="">
             海鲜<input type="checkbox" id="signup_taboo_2">
             奶制品<input type="checkbox" id="signup_taboo_3">
             花生<input type="checkbox" id="signup_taboo_4"></p>
