--- a/web/index.html
+++ b/web/index.html
@@ -41,10 +41,10 @@
         <p> 姓名：<input type="text" id="SignUp_Username" ></p>
         <p> 密码: <input type="password" id="SignUp_Password"></p>
         <p>确认密码:  <input type="password" id="SignUp_ConfirmPW"></p>
-        <p> 忌口食物: 鸡蛋<input type="checkbox" id="signup_taboo_1" value="鸡蛋">
-            海鲜<input type="checkbox" id="signup_taboo_2">
-            奶制品<input type="checkbox" id="signup_taboo_3">
-            花生<input type="checkbox" id="signup_taboo_4"></p>
+        <p> 忌口食物: 鸡蛋<input type="checkbox" id="signup_taboo1" value="鸡蛋">
+            海鲜<input type="checkbox" id="signup_taboo2">
+            奶制品<input type="checkbox" id="signup_taboo3">
+            花生<input type="checkbox" id="signup_taboo4"></p>
         <nav>
             <a  href="" id="SignUp_Btn2" title="SignUp">注册</a>
             &nbsp;
