--- a/web/index.html
+++ b/web/index.html
@@ -42,9 +42,9 @@
         <p> 密码: <input type="password" id="SignUp_Password"></p>
         <p>确认密码:  <input type="password" id="SignUp_ConfirmPW"></p>
         <p> 忌口食物: 鸡蛋<input type="checkbox" id="signup_taboo1" value="鸡蛋">
-            海鲜<input type="checkbox" id="signup_taboo2">
-            奶制品<input type="checkbox" id="signup_taboo3">
-            花生<input type="checkbox" id="signup_taboo4"></p>
+            海鲜<input type="checkbox" id="signup_taboo2"value="海鲜">
+            奶制品<input type="checkbox" id="signup_taboo3"value="奶制品">
+            花生<input type="checkbox" id="signup_taboo4"value="花生"></p>
         <nav>
             <a  href="" id="SignUp_Btn2" title="SignUp">注册</a>
             &nbsp;
