--- a/web/index.html
+++ b/web/index.html
@@ -107,23 +107,25 @@
         <button id="ToCalculate_Btn">开始计算</button>
         <input id="ChooseFood">
         <form >
-            <p>鸡蛋<input type="checkbox"  id="eggs" name="eggs">
-                牛肉<input type="checkbox" name="beaf">
-                精瘦猪肉<input type="checkbox" name="slim_pork">
-                五花肉<input type="checkbox" name="reguler_pork">
-                鸡胸肉<input type="checkbox" name="chicken_chest">
+            <p> 鸡蛋<input type="checkbox"  id="egg" >
+                牛肉<input type="checkbox" id="beaf">
+                猪肉<input type="checkbox" id="pork">
+                鸡肉<input type="checkbox" id="chicken">
+                羊肉<input type="checkbox" id="mutton">
                 <br>
-                鸡腿肉<input type="checkbox" name="chicken_leg">
-                鸡翅<input type="checkbox" name="chicken_leg">
-
-                面条<input type="checkbox" name="noodle">
-                米饭<input type="checkbox" name="rice">
-                牛奶<input type="checkbox" name="milk">
-                馒头<input type="checkbox" name="ccake">
-                牛奶<input type="checkbox" name="milk">
-                馒头<input type="checkbox" name="ccake">
+                山药<input type="checkbox" id="yam">
+                土豆<input type="checkbox"id="potato">
+                番茄<input type="checkbox"id="tomato">
+                竹笋<input type="checkbox"id="bamboo">
+                油菜<input type="checkbox"id="rape">
+                <br>
+                大米<input type="checkbox" id="rice">
+                糯米<input type="checkbox" id="sticky">
+                玉米<input type="checkbox" id="corn">
+                馒头<input type="checkbox" id="bread">
+                燕麦<input type="checkbox" id="oat">
             </p>
-            食物数量<input  id="FoodQuantity">
+            食物数量<input  id="Food_Quantity">克
 
             <br>
             <button id="Food_add_Btn">添加</button>
