--- a/web/index.html
+++ b/web/index.html
@@ -108,7 +108,7 @@
         <input id="Calculate_Result">卡路里
         <form >
             <p>
-                牛肉<input type="checkbox" id="beaf" value="牛肉">
+                牛肉<input type="checkbox" id="beef" value="牛肉">
                 猪肉<input type="checkbox" id="pork" value="猪肉">
                 鸡肉<input type="checkbox" id="chicken" value="鸡肉">
                 羊肉<input type="checkbox" id="mutton" value="羊肉">
@@ -129,7 +129,7 @@
             <br>
             <label>已选择</label>
 
-            <textarea id="chosen_area"></textarea>
+            <textarea id="Chosen_Area" value=""></textarea>
         </form>
 
 
