--- a/web/index.html
+++ b/web/index.html
@@ -102,11 +102,11 @@
     </div>
 
 
-    <form id="ToCalculate_div" class="ToCalculate_div">
+    <div id="ToCalculate_div" class="ToCalculate_div">
         <h3>计算模块</h3>
         <button id="Calculate_Btn">开始计算</button>
         <input id="Calculate_Result">卡路里
-        <form >
+        <div >
             <p>
                 牛肉<input type="checkbox" id="beef" value="牛肉">
                 猪肉<input type="checkbox" id="pork" value="猪肉">
@@ -123,18 +123,18 @@
                 馒头<input type="checkbox" id="bread" value="馒头">
                 鸡蛋<input type="checkbox" id="egg" value="鸡蛋">
             </p>
-            食物数量<input  type="text" id="Food_Quantity">克
+            食物数量<input  type="text" id="Quantity">克
             <button id="Add_Btn">添加</button>
             <br>
             <br>
             <label>已选择</label>
 
-            <textarea id="Chosen_Area" value=""></textarea>
-        </form>
+            <textarea id="Chosen_Area"></textarea>
+        </div>
 
 
 
-    </form>
+    </div>
 
 
     <form id="Food_Result_div" class="Food_Result_div">
