--- a/web/index.html
+++ b/web/index.html
@@ -36,7 +36,7 @@
     <br>
     <br>
 
-    <form id=Signup_div class="Signup_div" >
+    <form id="Signup_div" class="Signup_div" >
         <h1>注册页面</h1>
         <p> 姓名：<input type="text" id="SignUp_Username" ></p>
         <p> 密码: <input type="password" id="SignUp_Password"></p>
@@ -64,9 +64,7 @@
             <a  href="" id="SignUp_Btn1" title="LogIn">注册</a>
         </nav>
     </form>
-
 </div>
-
 <div id="Homepage_div" class="Homepage" >
     <h1>健康管理 私人订制</h1>
     <div id="header">
