--- a/web/index.html
+++ b/web/index.html
@@ -102,6 +102,14 @@
     </div>
 
 
+    <div id="showchart_div" class="showchart_div">
+        <h2>显示模块</h2>
+        <button id="showchart_Btn">营养元素表</button>
+    </div>
+
+
+
+
     <div id="ToCalculate_div" class="ToCalculate_div">
         <h3>计算模块</h3>
         <button id="Calculate_Btn">开始计算</button>
@@ -144,7 +152,7 @@
 
             </div>
         </div>
-        <table id="Table_Menu" clas="Table_Menu">
+        <table id="Table_Menu" class="Table_Menu">
             <ul >
                 <li>
 
