开始计算模块
开始计算模块

--- a/web/index.html
+++ b/web/index.html
@@ -126,7 +126,7 @@
             <br>
             <label>已选择</label>
             <textarea id="Chosen_Area" ></textarea>
-            计算结果：<input id="Calculate_Result">
+            计算结果：<input id="Calculate_Result">卡路里
         </div>
 
 
