--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
 <body >
 
 <div class="signlog">
-        <br>
+    <br>
 
     <form id=Signup_div class="Signup_div">
         <br><br>
@@ -66,20 +66,20 @@
     <div id="ToMatch_div" class="ToMatch_div" >
         <br><br><br><br>
         <div style="text-align: center">
-        <h1>健康管理 私人订制</h1>
-        <a href="/login" id="LogIn_Btn2" title="登录" style="margin-left: 80%" >登录/注册</a>
-        <br><br>
-        <form >
-            <label>我的定制目标</label>
-            <p>
-                总热量设定：<input type="text" id="Select_Calory">
-            <br>
+            <h1>健康管理 私人订制</h1>
+            <a href="/login" id="LogIn_Btn2" title="登录" style="margin-left: 80%" >登录/注册</a>
+            <br><br>
+            <form >
+                <label>我的定制目标</label>
+                <p>
+                    总热量设定：<input type="text" id="Select_Calory">
+                    <br>
                 <form>
-                <h5>忌口食物：</h5>
-                鸡蛋<input type="checkbox" id="T1">
-                花生<input type="checkbox" id="T2">
-                海鲜<input type="checkbox" id="T3">
-                坚果<input type="checkbox" id="T4">
+                    <h5>忌口食物：</h5>
+                    鸡蛋<input type="checkbox" id="T1">
+                    花生<input type="checkbox" id="T2">
+                    海鲜<input type="checkbox" id="T3">
+                    坚果<input type="checkbox" id="T4">
                 </form>
                 <form>
                     身体状况
@@ -88,17 +88,17 @@
                     高血压<input type="checkbox" id="C3">
                     心脏病<input type="checkbox" id="C4">
                 </form>
-            </p>
+                </p>
 
-            <br>
-            <a href="/match" id="ToMatch_Btn">开始搭配</a>
-        </form>
+                <br>
+                <a href="/match" id="ToMatch_Btn">开始搭配</a>
+            </form>
         </div>
     </div>
 
 
     <div id="ToCalculate_div" class="ToCalculate_div" style="display: block">
-  <br><br>
+        <br><br>
         <h1>卡路里计算器</h1>
         <br><br>
 
@@ -126,7 +126,7 @@
             <br>
             <label>已选择</label>
             <textarea id="Chosen_Area" ></textarea>
-            计算结果：<input id="Calculate_Result">
+            计算结果：<input id="Calculate_Result">卡路里
         </div>
 
 
