--- a/web/index.html
+++ b/web/index.html
@@ -67,7 +67,7 @@
         <br><br><br><br>
         <div style="text-align: center">
             <h1>健康管理 私人订制</h1>
-            <a href="/login" id="LogIn_Btn2" title="登录" style="margin-left: 80%" >登录/注册</a>
+            <a href="/login" id="LogOrSign" title="登录" style="margin-left: 80%" >登录/注册</a>
             <br><br>
             <form >
                 <label>我的定制目标</label>
